update styling with less

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--INCLUDED BOOTSTRAP COMPONENTS: 
-1. Accordian
+1. Accordion
 2. Buttons
 3. Cards
 4. Carousel
@@ -15,7 +15,9 @@
         <meta name="author" content="George Cao and Daniel Zhao">
         <meta name="description" content="Bouldering stuffs">
         <meta name="keywords" content="Bouldering 101 Crash Course">
-        <link rel="stylesheet" href="styles/main.css">
+        <!-- <link rel="stylesheet" href="styles/main.css"> -->
+        <link rel="stylesheet/less" type="text/css" href="styles/styles.less" />
+        <script src="https://cdn.jsdelivr.net/npm/less@4" ></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <title>bouldering</title>      
     </head>  
@@ -30,7 +32,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link active" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="intro.html">Climbing Basics</a>
@@ -68,7 +70,7 @@
         
         
         <!--Carousel of Images-->
-        <section class = "cont">
+        <section id="carousel" class = "cont">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
