--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
         <!-- SECTION 1 Card-->
         <section class = "cont">
-            <h2 style="font-size: larger; font-weight: 900;">An informal website about indoor bouldering that shouldn't be taken seriously</h2>
-            <h3>This website is a pretty informal introduction to climbing. There is some good information on it but a lot of it is not the most accurate. I just wanted to have fun and show it to my other climbing friends.</h3>
+            <h2 class="weightedtext">An informal website about indoor bouldering that shouldn't be taken seriously</h2>
+            <h3 id="description">This website is a pretty informal introduction to climbing. There is some good information on it but a lot of it is not the most accurate. I just wanted to have fun and show it to my other climbing friends.</h3>
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="images/donkey.jpg" alt="Card donkey boulder">
                 <div class="card-body">
@@ -160,8 +160,6 @@
 
         <!--Footer-->
         <footer class = "cont">
-                <small style="color:white;" >Author: George Cao</small>
-                <small><a href="mailto:glc6qrx@virginia.edu">glc6qrx@virginia.edu</a></small>
                 <ul class = "top">
                     <li class="top">
                         <a class="top" href="index.html" >Home</a>
