--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 3. Cards
 4. Carousel
 5. Navbar -->
-
+<!--
+Sources used: https://cs4640.cs.virginia.edu, https://css-tricks.com/almanac/properties/s/scrollbar/
+-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
